--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,8 +63,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_whole_status_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/main_show_location_tv"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -72,12 +72,24 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_whole_status">
         </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+            android:id="@+id/main_show_location_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/main_search_location_iv"
+            app:layout_constraintBottom_toTopOf="@id/main_whole_status_rv"
+            android:text="location"
+            android:textSize="@dimen/descriptionStatus">
+        </TextView>
         <ImageView
-            android:id="@+id/main_search_location"
+            android:id="@+id/main_search_location_iv"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/main_whole_status_rv"
             android:src="@drawable/search_line">
         </ImageView>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -110,8 +122,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="#B3000000">
-<!--        android:visibility="invisible">-->
+        android:background="#B3000000"
+        android:visibility="invisible">
         <androidx.cardview.widget.CardView
             android:id="@+id/search_cv"
             android:layout_width="match_parent"
